<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop" />

    <FrameLayout
        android:id="@+id/dynamic_fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bu_add_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:layout="@layout/dynamic_fragment_lifecycle"
        tools:layout_height="22dp"
        tools:layout_width="match_parent" />

    <Button
        android:id="@+id/bu_add_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="addFragment"
        android:text="@string/add_fragment"
        app:layout_constraintBottom_toTopOf="@+id/bu_close_fragment"
        app:layout_constraintEnd_toEndOf="@+id/bu_close_activity_with_fragment"
        app:layout_constraintStart_toStartOf="@+id/bu_close_activity_with_fragment" />

    <Button
        android:id="@+id/bu_close_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="closeFragment"
        android:text="@string/close_fragment"
        app:layout_constraintBottom_toTopOf="@+id/bu_close_activity_with_fragment"
        app:layout_constraintEnd_toEndOf="@+id/bu_close_activity_with_fragment"
        app:layout_constraintStart_toStartOf="@+id/bu_close_activity_with_fragment" />

    <Button
        android:id="@+id/bu_close_activity_with_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="closeActivity"
        android:text="@string/close_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>